--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
-    "@edx/paragon": "^1.1.3",
+    "@edx/paragon": "edx/paragon.git#1f2759a0edaef4e7dd80e9644d8b3fac89081417",
     "classnames": "^2.2.5",
     "@edx/edx-bootstrap": "^0.4.0",
     "babel-polyfill": "^6.26.0",
