--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
-    "@edx/paragon": "^1.1.3",
+    "@edx/paragon": "edx/paragon.git#516a418906de8fe941621d8d09627306d9185b17",
     "classnames": "^2.2.5",
     "@edx/edx-bootstrap": "^0.4.0",
     "babel-polyfill": "^6.26.0",
