--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "i18n_cleanJson": "node scripts/cleanI18nJson.js",
     "lint": "eslint --ext .js --ext .jsx .",
     "lint_fix": "eslint --fix --ext .js --ext .jsx .",
-    "prepublishOnly": "npm run build",
+    "prepare": "npm run build",
     "start": "NODE_ENV=development BABEL_ENV=development $(npm bin)/webpack-dev-server --config=config/webpack.dev.config.js --hot --inline --progress",
     "test": "jest --coverage"
   },
