--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "redux-mock-store": "^1.3.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0"
